syntax = "proto3";

package referentiel;

// ========== CONDITION PAIEMENT SERVICE ==========
service ConditionPaiementService {
  rpc Create(CreateConditionPaiementRequest) returns (ConditionPaiement);
  rpc Update(UpdateConditionPaiementRequest) returns (ConditionPaiement);
  rpc Get(GetConditionPaiementRequest) returns (ConditionPaiement);
  rpc GetByCode(GetConditionPaiementByCodeRequest) returns (ConditionPaiement);
  rpc List(ListConditionPaiementRequest) returns (ListConditionPaiementResponse);
  rpc Delete(DeleteConditionPaiementRequest) returns (DeleteResponse);
}

message ConditionPaiement {
  string id = 1;
  string code = 2;
  string nom = 3;
  string description = 4;
  int32 delai_jours = 5;
  string created_at = 6;
  string updated_at = 7;
}

message CreateConditionPaiementRequest {
  string code = 1;
  string nom = 2;
  string description = 3;
  int32 delai_jours = 4;
}

message UpdateConditionPaiementRequest {
  string id = 1;
  string code = 2;
  string nom = 3;
  string description = 4;
  int32 delai_jours = 5;
}

message GetConditionPaiementRequest {
  string id = 1;
}

message GetConditionPaiementByCodeRequest {
  string code = 1;
}

message ListConditionPaiementRequest {
  string search = 1;
  Pagination pagination = 2;
}

message DeleteConditionPaiementRequest {
  string id = 1;
}

message ListConditionPaiementResponse {
  repeated ConditionPaiement conditions = 1;
  PaginationResult pagination = 2;
}

// ========== STATUT CLIENT SERVICE ==========
service StatutClientService {
  rpc Create(CreateStatutClientRequest) returns (StatutClient);
  rpc Update(UpdateStatutClientRequest) returns (StatutClient);
  rpc Get(GetStatutClientRequest) returns (StatutClient);
  rpc GetByCode(GetStatutClientByCodeRequest) returns (StatutClient);
  rpc List(ListStatutClientRequest) returns (ListStatutClientResponse);
  rpc Delete(DeleteStatutClientRequest) returns (DeleteResponse);
}

message StatutClient {
  string id = 1;
  string code = 2;
  string nom = 3;
  string description = 4;
  int32 ordre_affichage = 5;
  string created_at = 6;
  string updated_at = 7;
}

message CreateStatutClientRequest {
  string code = 1;
  string nom = 2;
  string description = 3;
  int32 ordre_affichage = 4;
}

message UpdateStatutClientRequest {
  string id = 1;
  string code = 2;
  string nom = 3;
  string description = 4;
  int32 ordre_affichage = 5;
}

message GetStatutClientRequest {
  string id = 1;
}

message GetStatutClientByCodeRequest {
  string code = 1;
}

message ListStatutClientRequest {
  string search = 1;
  Pagination pagination = 2;
}

message DeleteStatutClientRequest {
  string id = 1;
}

message ListStatutClientResponse {
  repeated StatutClient statuts = 1;
  PaginationResult pagination = 2;
}

// ========== FACTURATION PAR SERVICE ==========
service FacturationParService {
  rpc Create(CreateFacturationParRequest) returns (FacturationPar);
  rpc Update(UpdateFacturationParRequest) returns (FacturationPar);
  rpc Get(GetFacturationParRequest) returns (FacturationPar);
  rpc GetByCode(GetFacturationParByCodeRequest) returns (FacturationPar);
  rpc List(ListFacturationParRequest) returns (ListFacturationParResponse);
  rpc Delete(DeleteFacturationParRequest) returns (DeleteResponse);
}

message FacturationPar {
  string id = 1;
  string code = 2;
  string nom = 3;
  string description = 4;
  string created_at = 5;
  string updated_at = 6;
}

message CreateFacturationParRequest {
  string code = 1;
  string nom = 2;
  string description = 3;
}

message UpdateFacturationParRequest {
  string id = 1;
  string code = 2;
  string nom = 3;
  string description = 4;
}

message GetFacturationParRequest {
  string id = 1;
}

message GetFacturationParByCodeRequest {
  string code = 1;
}

message ListFacturationParRequest {
  string search = 1;
  Pagination pagination = 2;
}

message DeleteFacturationParRequest {
  string id = 1;
}

message ListFacturationParResponse {
  repeated FacturationPar facturations = 1;
  PaginationResult pagination = 2;
}

// ========== PERIODE FACTURATION SERVICE ==========
service PeriodeFacturationService {
  rpc Create(CreatePeriodeFacturationRequest) returns (PeriodeFacturation);
  rpc Update(UpdatePeriodeFacturationRequest) returns (PeriodeFacturation);
  rpc Get(GetPeriodeFacturationRequest) returns (PeriodeFacturation);
  rpc GetByCode(GetPeriodeFacturationByCodeRequest) returns (PeriodeFacturation);
  rpc List(ListPeriodeFacturationRequest) returns (ListPeriodeFacturationResponse);
  rpc Delete(DeletePeriodeFacturationRequest) returns (DeleteResponse);
}

message PeriodeFacturation {
  string id = 1;
  string code = 2;
  string nom = 3;
  string description = 4;
  string created_at = 5;
  string updated_at = 6;
}

message CreatePeriodeFacturationRequest {
  string code = 1;
  string nom = 2;
  string description = 3;
}

message UpdatePeriodeFacturationRequest {
  string id = 1;
  string code = 2;
  string nom = 3;
  string description = 4;
}

message GetPeriodeFacturationRequest {
  string id = 1;
}

message GetPeriodeFacturationByCodeRequest {
  string code = 1;
}

message ListPeriodeFacturationRequest {
  string search = 1;
  Pagination pagination = 2;
}

message DeletePeriodeFacturationRequest {
  string id = 1;
}

message ListPeriodeFacturationResponse {
  repeated PeriodeFacturation periodes = 1;
  PaginationResult pagination = 2;
}

// ========== EMISSION FACTURE SERVICE ==========
service EmissionFactureService {
  rpc Create(CreateEmissionFactureRequest) returns (EmissionFacture);
  rpc Update(UpdateEmissionFactureRequest) returns (EmissionFacture);
  rpc Get(GetEmissionFactureRequest) returns (EmissionFacture);
  rpc GetByCode(GetEmissionFactureByCodeRequest) returns (EmissionFacture);
  rpc List(ListEmissionFactureRequest) returns (ListEmissionFactureResponse);
  rpc Delete(DeleteEmissionFactureRequest) returns (DeleteResponse);
}

message EmissionFacture {
  string id = 1;
  string code = 2;
  string nom = 3;
  string description = 4;
  string created_at = 5;
  string updated_at = 6;
}

message CreateEmissionFactureRequest {
  string code = 1;
  string nom = 2;
  string description = 3;
}

message UpdateEmissionFactureRequest {
  string id = 1;
  string code = 2;
  string nom = 3;
  string description = 4;
}

message GetEmissionFactureRequest {
  string id = 1;
}

message GetEmissionFactureByCodeRequest {
  string code = 1;
}

message ListEmissionFactureRequest {
  string search = 1;
  Pagination pagination = 2;
}

message DeleteEmissionFactureRequest {
  string id = 1;
}

message ListEmissionFactureResponse {
  repeated EmissionFacture emissions = 1;
  PaginationResult pagination = 2;
}

// ========== TRANSPORTEUR COMPTE SERVICE ==========
service TransporteurCompteService {
  rpc Create(CreateTransporteurCompteRequest) returns (TransporteurCompte);
  rpc Update(UpdateTransporteurCompteRequest) returns (TransporteurCompte);
  rpc Get(GetTransporteurCompteRequest) returns (TransporteurCompte);
  rpc ListByOrganisation(ListTransporteurByOrganisationRequest) returns (ListTransporteurCompteResponse);
  rpc List(ListTransporteurCompteRequest) returns (ListTransporteurCompteResponse);
  rpc Activer(ActivateTransporteurRequest) returns (TransporteurCompte);
  rpc Desactiver(ActivateTransporteurRequest) returns (TransporteurCompte);
  rpc Delete(DeleteTransporteurCompteRequest) returns (DeleteResponse);
}

message TransporteurCompte {
  string id = 1;
  string type = 2;
  string organisation_id = 3;
  string contract_number = 4;
  string label_format = 5;
  bool actif = 6;
  string created_at = 7;
  string updated_at = 8;
}

message CreateTransporteurCompteRequest {
  string type = 1;
  string organisation_id = 2;
  string contract_number = 3;
  string password = 4;
  string label_format = 5;
}

message UpdateTransporteurCompteRequest {
  string id = 1;
  string contract_number = 2;
  string password = 3;
  string label_format = 4;
}

message GetTransporteurCompteRequest {
  string id = 1;
}

message ListTransporteurByOrganisationRequest {
  string organisation_id = 1;
  bool actif = 2;
  Pagination pagination = 3;
}

message ListTransporteurCompteRequest {
  string type = 1;
  bool actif = 2;
  Pagination pagination = 3;
}

message ActivateTransporteurRequest {
  string id = 1;
}

message DeleteTransporteurCompteRequest {
  string id = 1;
}

message ListTransporteurCompteResponse {
  repeated TransporteurCompte transporteurs = 1;
  PaginationResult pagination = 2;
}

// ========== COMMON MESSAGES ==========
message Pagination {
  int32 page = 1;
  int32 limit = 2;
  string sort_by = 3;
  string sort_order = 4;
}

message PaginationResult {
  int32 total = 1;
  int32 page = 2;
  int32 limit = 3;
  int32 total_pages = 4;
}

message DeleteResponse {
  bool success = 1;
}
